# apps/backend/src/entity/index.ts
@@ -1,3 +1,4 @@
 export * from "./user.entity";
 export * from "./project.entity";
 export * from "./farm.entity";
+export * from "./activity.entity";
