# apps/backend/src/models/index.ts
@@ -2,3 +2,4 @@ export * from "./user.model";
 export * from "./project.model";
 export * from "./farm.model";
 export * from "./report.model";
+export * from "./activity.model";
